# corolaria

./: .dockerignore  .env.example  .gitignore  =1.20.0  Dockerfile.api  Dockerfile.ingestion  README.md  TODO_INGESTION.md  benchmark_final.json  benchmark_final_corrected_embeddings.json  docker-compose.api.dev.yml  docker-compose.api.prod.yml  docker-compose.infrastructure.yml  docker-compose.ingestion.dev.yml  docker-compose.ingestion.prod.yml  docker-compose.ingestion.yml  eu_celex_list.txt  log.json  logs.txt  main.py  matrix_results.json  multi_result.json  plan.md  pyproject.toml  requirements.txt  results.json  start_api.sh  start_ingestion.sh  test.txt  test_benchmark_problem.json  test_benchmark_problem_2.json  to_reingest.txt  todo  version.txt  version1.txt  version2.txt
config/: config.yaml  prompts.yaml
data/: coloraria.db  coloraria.db-shm  coloraria.db-wal  embeddings_cache.json  unresolved_references.json
data/raw/: normativa-consolidada.xml  normativa-original.xml
docs/: citation_spanish.md  docker-deployment.md
documentation/: README.md  TODO.md  ai_layer.md  api_schema.md  beta_integration.md  docker-deployment.md  domain_model.md  graph_schema.md  infrastructure.md  ingestion_pipeline.md  overview.md  persistence-layer.md  retrieval_system.md  type_safety_fixes.md
documentation/services/: api.md  benchmark.md  chat.md  ingestion.md  retrieval.md
exams/: TEST_2024.txt  TEST_2025.txt
ideas/: citation.py  indice.py  parser.py  tree.py  unified.py  visitor.py
indications/: example.txt
issues/: praser.txt
output/: own_implementation.txt  raw.txt  test_migration.txt
scripts/: create_mariadb_schema.py  create_user.py  detailed_profiling.py  migrate_embedding_cache.py  migrate_to_mariadb.py  profile_pipeline.py  run_benchmark.py  test_agent_flow.py  test_agent_provider.py  test_api.py  test_auth.py  test_azure_openai_provider.py  test_caching.py  test_chat_integration.py  test_context_decision.py  test_context_formatting.py  test_embedding_flow.py  test_eurlex_connection.py  test_gemini_provider.py  test_mariadb_crud.py  test_neo4j_indexer.py  test_qdrant_indexer.py  test_real_agent.py  test_resilient_provider.py  test_retrieval.py  verify_batch_runner.py
src/: debug_duplicates.py
src/ai/: context_decision.py
src/api/: main.py
src/benchmarks/: __init__.py
src/config/: __init__.py  loader.py
src/documents/: base.py  change_handler.py  common.py  (+2 more)
(+180 files in other folders)
