[project]
name = "coloraria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-genai>=1.55.0",
  "neo4j==6.0.3",
  "memory-profiler==0.61.0",
  "psutil==7.1.3",
  "pydantic>=2.12.3",
  "pydantic-core==2.41.4",
  "pyjwt>=2.8.0",
  "python-bcrypt==0.3.2",
  "python-dotenv==1.2.1",
  "pyyaml==6.0.3",
  "bcrypt>=4.0.0",
  "dotenv==0.9.9",
  "fastapi==0.124.2",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "h11==0.16.0",
  "idna==3.11",
  "requests==2.32.5",
  "uvicorn==0.38.0",
  "lxml>=6.0.2",
]

[dependency-groups]
ingestion = [
  "lxml==6.0.2",
]

inference = [
    # LangGraph for workflow orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # Arize Phoenix for observability
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "openinference-instrumentation-google-genai>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-api>=1.20.0",
]
